arrumando o botao e add img

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
     <title>Doe Tempo</title>
   </head>
   <body>
